--- a/package.json
+++ b/package.json
@@ -2,11 +2,32 @@
   "name": "podcast-app-be",
   "version": "1.0.0",
   "description": "backend app podcast-app",
-  "main": "index.js",
+  "main": "app.js",
+  "scripts": {
+    "start": "node src/app.js",
+    "dev": "nodemon src/app.js",
+    "preset": "babel-node --presets es2015 src/app.js"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Vendrieou/podcast-app.git"
   },
   "author": "vendrie",
-  "license": "MIT"
+  "license": "MIT",
+  "dependencies": {
+    "bcrypt": "^5.0.0",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "dotenv": "^8.0.0",
+    "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
+    "mariadb": "^2.0.5",
+    "sequelize": "^5.8.7"
+  },
+  "devDependencies": {
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
+    "nodemon": "^1.19.1"
+  }
 }
